update translations add menu translation highlight

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,73 +1,88 @@
 {
-  "header_login": "Login",
 
-  "hero_title": "Create Free QR Menu",
-  "hero_subtitle": "Take Orders from Tables",
-  "hero_description": "Offer your customers a contactless, fast, and modern ordering experience. Digitize your business with a QR menu and simplify your order and restaurant management processes.",
-  "hero_cta_button": "Create for Free",
-  "hero_sample_button": "Sample Menu",
+   "header_login": "Login",
 
-  "highlight_1_subtitle": "Fast Orders",
-  "highlight_1_title": "Take Orders from Tables with QR Menu",
-  "highlight_1_description": "Your guests can instantly access your menu by scanning the QR code as soon as they sit down, without downloading any app. Thanks to its user-friendly interface, they can easily browse products, choose options, and send their orders directly. This reduces the need for waiters and significantly shortens the order-taking process. It’s indispensable for reducing service load and increasing customer satisfaction during busy hours.",
+   "hero_title": "Create Your QR Code Menu",
+   "hero_subtitle": "Take Orders from Tables",
+   "hero_description": "Transform your paper menu into a fully digital experience. Let guests scan a QR code to view the menu, place their orders from the table, and manage all incoming orders from a single dashboard.",
+   
+   "hero_cta_button": "Create Free Menu",
+   "hero_sample_button": "Sample Menu ",
 
-  "highlight_2_subtitle": "Easy Bill Management",
-  "highlight_2_title": "Track Orders and Payments",
-  "highlight_2_description": "Each table's bill is tracked live. Products added by customers or waiters instantly reflect on the bill. Cashiers can accept payments using various methods like cash, credit card, or meal vouchers when closing the order. You can also split bills by person, merge or transfer tables with ease. This system reduces internal errors and speeds up the payment process.",
+   "highlight_1_subtitle": "Speed Up Service",
+   "highlight_1_title": "Accept Table Orders with a QR Menu",
+   "highlight_1_description": "Guests can instantly access your restaurant menu by scanning the QR code without downloading any app. With a user-friendly interface, customers can browse the digital menu, add items to their basket, and order food directly from the table. The QR code ordering feature simplifies restaurant operations, speeds up service, and improves the overall dining experience.",
 
-  "highlight_3_subtitle": "Detailed Statistics",
-  "highlight_3_title": "Evaluate Performance with Detailed Reports",
-  "highlight_3_description": "Track your sales, product performance, and payment methods in real time. With advanced analytics screens, you can access insights like which product sells the most, your peak hours, and how much each table spent. These insights help you make informed decisions as you grow your business. Get weekly, monthly, and yearly reports with a single click.",
+   "highlight_2_subtitle": "Bill Management",
+   "highlight_2_title": "Track orders and payments",
+   "highlight_2_description": "Each table’s bill is tracked in real time. Items added by customers or waitstaff are instantly reflected in the bill. Cashiers can accept payments using multiple methods, including cash, credit cards, and vouchers. You can also split bills by person, merge or transfer tables, and close orders with ease. The restaurant bill management feature ensures accurate billing, faster payments, and a smoother checkout experience.",
 
-  "highlight_4_subtitle": "Live Kitchen Screen",
-  "highlight_4_title": "Send Orders Instantly to the Kitchen",
-  "highlight_4_description": "Orders are instantly sent to the kitchen screen. Details like which product was ordered when, and which table ordered what are clearly displayed for kitchen staff. This reduces order mistakes, speeds up preparation, and ensures a smoother service flow.",
+   "highlight_3_subtitle": "Detailed Statistics",
+   "highlight_3_title": "Track sales and QR menu analytics",
+   "highlight_3_description": "Monitor your restaurant’s performance with real-time analytics. Instantly track total sales, top-selling products, payment types, and table spending. Identify your busiest hours and best-performing menu items with detailed restaurant reporting tools. Generate weekly, monthly, and yearly sales reports to make data-driven decisions and grow your business.",
 
-  "pricing_subtitle": "Pricing",
-  "pricing_title": "Start Free - Upgrade Anytime",
-  "pricing_description": "Create your QR menu for free, and switch to the Professional plan anytime for more advanced features.",
+  "highlight_4_subtitle": "Kitchen Display System",
+  "highlight_4_title": "Send orders to the kitchen instantly",
+  "highlight_4_description": "Orders placed through the QR Menu are instantly displayed on the kitchen screen. Kitchen staff can clearly see which items were ordered, by which table, and when. Orders are prioritized, preparation is streamlined, and service flow is efficiently managed through the kitchen dashboard.",
 
-  "pricing_free_title": "Basic",
-  "pricing_free_description": "For beginners — create and manage a QR menu",
-  "pricing_free_price": "Free",
+  "highlight_5_subtitle": "Multi-Language Support",
+  "highlight_5_title": "Support 50+ languages with auto translation",
+  "highlight_5_description": "Make your digital menu accessible to everyone with multi-language support and auto translation. MenuMix instantly translates your QR code menu into more than 50 languages. Guests can view your menu in their preferred language without downloading any app. This feature enhances the dining experience for international customers and helps you serve a global audience with ease.",
 
-  "pricing_pro_title": "Professional",
-  "pricing_pro_description": "Advanced features like table ordering and bill tracking",
-  "pricing_pro_price_discount": "$30",
-  "pricing_pro_price": "$25",
-  "pricing_pro_month": "month",
+ "pricing_subtitle": "Pricing",
+ "pricing_title": "Start Free - Upgrade Anytime",
+ "pricing_description": "You can create your QR menu for free and upgrade to the professional plan anytime to access advanced features.",
 
-   "pricing_feature_1": "Add unlimited products and categories",
-   "pricing_feature_2": "Create unlimited tables and QR codes",
-   "pricing_feature_3": "Product options and variants",
-   "pricing_feature_4": "Customize menu theme and colors",
-   "pricing_feature_5": "Take table orders via QR codes",
-   "pricing_feature_6": "Order management and kitchen integration",
-   "pricing_feature_7": "Bill management and payment tracking",
-   "pricing_feature_8": "Detailed reporting and statistics",
-   "pricing_feature_9": "Unlimited users and role management",
-   "pricing_feature_all": "All features available in the free plan",
+ "pricing_free_title": "Basic",
+ "pricing_free_description": "Create and manage your QR menu for free.",
+ "pricing_free_price": "Free",
 
-  "faq_subtitle": "FAQ",
-  "faq_title": "Frequently Asked Questions",
+ "pricing_pro_title": "Professional",
+"pricing_pro_description": "Order management, multi-language support, and analytics",
+"pricing_pro_price_discount": "$30",
+"pricing_pro_price": "$25",
+"pricing_pro_month": "per month",
 
-  "faq_1_q": "Is the Basic plan really free?",
-  "faq_1_a": "Yes, the Basic plan is completely free and includes core features like menu creation, QR code generation, and basic order tracking.",
-  "faq_2_q": "What is a QR Menu and how does it work?",
-  "faq_2_a": "A QR Menu is a contactless digital menu system where your customers can instantly view your menu and place orders by scanning a QR code with their mobile devices.",
-  "faq_3_q": "Can I customize the menu design and colors?",
-  "faq_3_a": "Yes, with the Professional plan, you can fully customize your menu’s theme and colors to match your brand.",
-  "faq_4_q": "Is there a limit to how many products or tables I can add?",
-  "faq_4_a": "No, both the Basic and Professional plans allow you to add unlimited products, categories, and tables.",
-  "faq_5_q": "How are orders submitted via QR sent to the kitchen?",
-  "faq_5_a": "Orders placed via QR codes are instantly sent to the kitchen panel and can be viewed by kitchen staff in real-time.",
-  "faq_6_q": "Can I assign different roles to my staff?",
-  "faq_6_a": "Absolutely. You can define roles like waiter, kitchen staff, or manager and assign specific permissions to each role.",
+"pricing_feature_1": "Add unlimited products and categories",
+"pricing_feature_2": "Create unlimited tables and QR codes",
+"pricing_feature_3": "Product features and options",
+"pricing_feature_4": "Customize menu themes and colors",
+"pricing_feature_5": "Choose a custom business URL",
+"pricing_feature_6": "Receive orders from tables via QR code",
+"pricing_feature_7": "Order tracking and kitchen display",
+"pricing_feature_8": "Bill management and payment tracking",
+"pricing_feature_9": "Detailed reporting and analytics",
+"pricing_feature_10": "Unlimited users and permission control",
+"pricing_feature_11": "Add multiple languages with auto-translation",
+"pricing_feature_all": "All features included in the free plan",
 
-  "blog_title": "Blog",
-  "blog_description": "Discover our latest news and updates.",
 
-  "menu_legal": "Legal",
-  "menu_features": "Features",
-  "menu_language": "Language"
+"faq_subtitle": "FAQ",
+"faq_title": "Frequently Asked Questions",
+
+
+"faq_1_q": "What is a Digital Menu and how does it work?",
+"faq_1_a": "A Digital QR Menu is a contactless menu system that allows your customers to instantly view your menu and place orders by scanning a QR code with their mobile devices.",
+
+"faq_2_q": "What does the Free QR Menu plan include?",
+"faq_2_a": "With the free digital menu package, you can create unlimited product categories, items, and tables. You can also add your business location, social media links, operating hours, and Wi-Fi details to your menu. A custom business URL can be registered, and you can personalize the menu’s theme and colors to match your brand. With the 'Call Waiter' feature, your customers can call a waiter directly from the QR menu.",
+
+"faq_3_q": "What makes the Professional QR Menu plan different?",
+"faq_3_a": "The Professional QR Menu plan allows you to receive orders directly from tables, manage bills from a single panel, and handle kitchen operations with a live kitchen display. You can generate detailed sales reports to measure performance by menu items, categories, and tables, and get end-of-day summaries. The multi-language option translates your QR menu into up to 5 selected languages automatically. You can also assign user roles such as waiter, kitchen staff, or manager to your employees.",
+
+"faq_4_q": "Can I customize the menu design and colors?",
+"faq_4_a": "Yes, in both free and professional QR Menu plans, you can fully customize the menu’s theme and colors to align with your brand.",
+
+"faq_5_q": "How many products or tables can I add? Is there an order limit?",
+"faq_5_a": "All plans allow to add unlimited products, categories, and tables. In the professional menu plan, you can also receive and manage unlimited orders.",
+
+"faq_6_q": "Will my QR Menu have a custom business URL?",
+"faq_6_a": "Yes. In all plans, you can choose a custom URL for your business during registration. If a URL has already been taken by another business, it cannot be reused. Your digital menu will be accessible to customers through this URL.",
+
+"blog_title": "Blog",
+"blog_description": "Discover our latest news and updates.",
+
+"menu_legal": "Legal",
+"menu_features": "Features",
+"menu_language": "Language"
 }
