--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,83 +1,87 @@
 {
-  "header_login": "Iniciar sesión",
 
-  "hero_title": "Crea tu Carta Digital con Código QR",
-  "hero_subtitle": "Pide desde la mesa",
-  "hero_description": "Ofrece a tus clientes una experiencia de pedido sin contacto, rápida y moderna con una carta digital QR. Gestiona todos los procesos de pedidos y reportes desde un solo panel.",
-  "hero_cta_button": "Crear Carta Gratis",
-  "hero_sample_button": "Ver Ejemplo",
+   "header_login": "Acceder",
 
-  "highlight_1_subtitle": "Pide desde la mesa",
-  "highlight_1_title": "Pide desde la mesa con carta QR",
-  "highlight_1_description": "Tus clientes acceden a la carta digital escaneando un código QR, sin descargar apps. Con una interfaz rápida e intuitiva, pueden ver el menú, elegir platos y pedir directamente desde su mesa. Mejora la experiencia y acelera la rotación de mesas.",
+   "hero_title": "Crea tu Carta Digital QR Gratis",
+   "hero_subtitle": "Recibe Pedidos desde las Mesas",
+   "hero_description": "Convierte tu menú en papel en un Menú Digital completamente gratis. Los clientes pueden escanear un código QR para ver la carta, hacer pedidos desde la mesa y gestionar todos los pedidos desde un solo panel de control.",
 
-  "highlight_2_subtitle": "Gestión de cuentas",
-  "highlight_2_title": "Gestiona pedidos y pagos",
-  "highlight_2_description": "Controla en tiempo real los pedidos realizados por clientes o camareros. Acepta pagos en efectivo, tarjeta o vales, permite pagos divididos y combina o transfiere mesas fácilmente.",
+   "hero_cta_button": "Crear Carta Gratis",
+   "hero_sample_button": "Carta Ejemplo",
 
-  "highlight_3_subtitle": "Estadísticas detalladas",
-  "highlight_3_title": "Analiza tu carta y el rendimiento de mesas",
-  "highlight_3_description": "Consulta tus ventas totales, informes de cierre, productos más vendidos, métodos de pago y gasto por mesa. Identifica tus horarios más ocupados y platos más populares. Toma decisiones basadas en datos con reportes semanales, mensuales y anuales.",
+   "highlight_1_subtitle": "Agiliza el Servicio",
+   "highlight_1_title": "Pide desde la mesa con carta QR",
+   "highlight_1_description": "Tus clientes acceden a la carta digital escaneando un código QR, sin descargar apps. Con una interfaz rápida e intuitiva, pueden ver el menú, elegir platos y pedir directamente desde su mesa. Mejora la experiencia y acelera la rotación de mesas.",
 
-  "highlight_4_subtitle": "Pantalla de cocina",
-  "highlight_4_title": "Pedidos directos a cocina",
-  "highlight_4_description": "Los pedidos realizados desde la carta QR se envían directamente a la pantalla de cocina. El personal ve qué se pidió, desde qué mesa y cuándo. Las cuentas se priorizan, se agiliza la preparación y el flujo del servicio se gestiona desde una pantalla centralizada.",
+   "highlight_2_subtitle": "Gestión de Pedidos y Pagos",
+   "highlight_2_title": "Control total de cuentas y cobros",
+   "highlight_2_description": "Ve en tiempo real qué ha pedido cada mesa. Acepta pagos en efectivo, tarjeta o vales. Divide la cuenta, combina mesas o transfiere pedidos en segundos. Todo está conectado para un servicio más rápido y preciso.",
 
-  "pricing_subtitle": "Precios",
-  "pricing_title": "Crea tu Carta QR Digital Gratis",
-  "pricing_description": "Empieza gratis y cambia al plan profesional cuando necesites más funciones.",
+   "highlight_3_subtitle": "Estadísticas de tu Carta Digital",
+   "highlight_3_title": "Ventas, productos más pedidos y horas pico",
+   "highlight_3_description": "Consulta ventas por mesa, productos favoritos, formas de pago y más. Con informes automáticos diarios, semanales o mensuales, puedes optimizar tu menú y aumentar tus ingresos.",
 
-  "pricing_free_title": "Básico",
-  "pricing_free_description": "Crear y gestionar carta QR de forma gratuita.",
-  "pricing_free_price": "Gratis",
+  "highlight_4_subtitle": "Pantalla de Cocina Digital",
+  "highlight_4_title": "Envía los Pedidos a Cocina al Instante",
+  "highlight_4_description": "Los pedidos realizados a través de la Carta Digital se muestran al instante en la pantalla de cocina. El personal puede ver claramente qué platos se pidieron, en qué mesa y a qué hora. Los pedidos se priorizan, la preparación se agiliza y el flujo del servicio se gestiona de forma eficiente desde el panel de cocina.",
 
-  "pricing_pro_title": "Profesional",
-  "pricing_pro_description": "Pedidos desde mesa, gestión de cuentas, idiomas y estadísticas",
-  "pricing_pro_price_discount": "€30",
-  "pricing_pro_price": "€25",
-  "pricing_pro_month": "mes",
+  "highlight_5_subtitle": "Soporte Multilingüe",
+  "highlight_5_title": "Compatible con más de 50 idiomas con traducción automática",
+  "highlight_5_description": "Haz que tu carta digital sea accesible para todos con soporte multilingüe y traducción automática. MenuMix traduce al instante tu carta digital con código QR a más de 50 idiomas. Los clientes pueden ver la carta en su idioma preferido sin necesidad de descargar ninguna app. Esta función mejora la experiencia gastronómica para clientes internacionales y te ayuda a atender a una audiencia global con facilidad.",
 
-  "pricing_feature_1": "Productos y categorías ilimitadas",
-  "pricing_feature_2": "Mesas y códigos QR ilimitados",
-  "pricing_feature_3": "Variantes y opciones de productos",
-  "pricing_feature_4": "Personalización de tema y colores",
-  "pricing_feature_5": "URL personalizada para tu negocio",
-  "pricing_feature_6": "Pedidos desde la mesa con código QR",
-  "pricing_feature_7": "Seguimiento de pedidos y pantalla de cocina",
-  "pricing_feature_8": "Gestión de cuentas y pagos",
-  "pricing_feature_9": "Informes y estadísticas detalladas",
-  "pricing_feature_10": "Usuarios ilimitados y gestión de roles",
-  "pricing_feature_11": "Idiomas múltiples y traducción automática",
-  "pricing_feature_all": "Todas las funciones del plan gratuito",
+   "pricing_subtitle": "Precios",
+   "pricing_title": "Empieza Gratis - Mejora Cuando Quieras",
+   "pricing_description": "Puedes crear tu carta QR gratis y cambiar al plan profesional en cualquier momento para acceder a funciones avanzadas.",
 
-  "faq_subtitle": "Preguntas frecuentes",
-  "faq_title": "Preguntas Frecuentes",
+   "pricing_free_title": "Básico",
+   "pricing_free_description": "Crea y gestiona tu carta QR de forma gratuita.",
+   "pricing_free_price": "Gratis",
 
-  "faq_1_q": "¿Qué es la carta QR y cómo funciona?",
-  "faq_1_a": "La carta QR es un sistema digital sin contacto que permite a tus clientes escanear un código QR con sus móviles para ver el menú y hacer pedidos al instante.",
+   "pricing_pro_title": "Profesional",
+   "pricing_pro_description": "Gestión de pedidos, soporte multilingüe y estadísticas",
+   "pricing_pro_price_discount": "$30",
+   "pricing_pro_price": "$25",
+   "pricing_pro_month": "al mes",
 
-  "faq_2_q": "¿Qué incluye la carta QR gratuita?",
-  "faq_2_a": "Con la carta digital gratuita puedes crear productos, categorías y mesas ilimitadas. Puedes añadir información de contacto, redes sociales, horarios y Wi-Fi. Personaliza los colores y temas, elige tu URL y permite que tus clientes llamen al camarero desde la carta.",
+   "pricing_feature_1": "Agrega productos y categorías ilimitadas",
+   "pricing_feature_2": "Crea mesas y códigos QR ilimitados",
+   "pricing_feature_3": "Características y opciones de productos",
+   "pricing_feature_4": "Personaliza temas y colores del menú",
+   "pricing_feature_5": "Elige una URL personalizada para tu negocio",
+   "pricing_feature_6": "Recibe pedidos desde las mesas mediante código QR",
+   "pricing_feature_7": "Seguimiento de pedidos y pantalla de cocina",
+   "pricing_feature_8": "Gestión de cuentas y seguimiento de pagos",
+   "pricing_feature_9": "Informes detallados y estadísticas",
+   "pricing_feature_10": "Usuarios ilimitados y control de permisos",
+   "pricing_feature_11": "Agrega varios idiomas con traducción automática",
+   "pricing_feature_all": "Todas las funciones incluidas en el plan gratuito",
 
-  "faq_3_q": "¿Qué ofrece el plan profesional?",
-  "faq_3_a": "El plan profesional permite recibir pedidos desde la mesa, gestionar cuentas y pedidos desde un solo panel, usar una pantalla de cocina en tiempo real y ver reportes de ventas detallados. Además, puedes traducir tu carta automáticamente a varios idiomas y asignar roles personalizados a tus empleados.",
 
-  "faq_4_q": "¿Puedo personalizar el diseño y colores del menú?",
-  "faq_4_a": "Sí, tanto en el plan gratuito como en el profesional puedes personalizar completamente el diseño y los colores del menú para adaptarlo a tu marca.",
+   "faq_subtitle": "Ayuda",
+   "faq_title": "Preguntas Frecuentes",
 
-  "faq_5_q": "¿Cuántos productos o mesas puedo añadir?",
-  "faq_5_a": "Todos los planes permiten añadir productos, categorías y mesas ilimitadas. El plan profesional permite recibir pedidos ilimitados.",
+   "faq_1_q": "¿Qué es una Carta Digital y cómo funciona?",
+   "faq_1_a": "Una Carta Digital con código QR es un sistema de menú sin contacto que permite a tus clientes ver el menú al instante y hacer pedidos escaneando un código QR con sus dispositivos móviles.",
 
-  "faq_6_q": "¿Mi carta QR tendrá su propia URL?",
-  "faq_6_a": "Sí. Durante el registro, eliges una URL única para tu negocio. Si ya está en uso, deberás elegir otra. Tus clientes accederán a tu carta usando esa URL.",
+   "faq_2_q": "¿Qué incluye el plan de Carta QR Gratis?",
+   "faq_2_a": "Con el plan gratuito de carta digital, puedes crear categorías de productos, artículos y mesas ilimitadas. También puedes añadir la ubicación de tu negocio, enlaces a redes sociales, horarios de atención y detalles de Wi-Fi. Puedes registrar una URL personalizada para tu negocio y personalizar el tema y los colores del menú según tu marca. Con la función 'Llamar al camarero', los clientes pueden solicitar atención directamente desde la carta QR.",
 
-  "faq_8_q": "¿Puedo asignar roles a mi personal?",
-  "faq_8_a": "En el plan profesional puedes asignar roles como camarero, cocina o administrador, y definir permisos específicos para cada uno.",
+   "faq_3_q": "¿Qué diferencia al plan Profesional de Carta QR?",
+   "faq_3_a": "El plan Profesional te permite recibir pedidos directamente desde las mesas, gestionar las órdenes desde un solo panel y coordinar la cocina con una pantalla en vivo. Puedes generar informes detallados de ventas por platos, áreas o mesas, y obtener resúmenes diarios. La opción multilingüe traduce automáticamente tu carta QR a hasta 5 idiomas seleccionados. También puedes asignar roles de usuario como camarero, personal de cocina o administrador a tu equipo.",
 
-  "blog_title": "Blog",
-  "blog_description": "Descubre nuestras últimas novedades y actualizaciones.",
+   "faq_4_q": "¿Puedo personalizar el diseño y los colores del menú?",
+   "faq_4_a": "Sí, tanto en los planes Gratuito como Profesional puedes personalizar completamente el tema y los colores del menú para que coincidan con la identidad de tu marca.",
 
-  "menu_legal": "Legal",
-  "menu_features": "Características",
-  "menu_language": "Idioma"
+   "faq_5_q": "¿Cuántos productos o mesas puedo añadir? ¿Hay un límite de pedidos?",
+   "faq_5_a": "Todos los planes permiten añadir productos, categorías y mesas ilimitadas. En el plan Profesional también puedes recibir pedidos sin límite.",
+
+   "faq_6_q": "¿Mi Carta QR tendrá una URL personalizada del negocio?",
+   "faq_6_a": "Sí. En todos los planes puedes elegir una URL personalizada durante el registro. Si la URL ya ha sido tomada por otro negocio, no podrá reutilizarse. Tus clientes podrán acceder a tu carta QR a través de esta URL.",
+
+   "blog_title": "Blog",
+   "blog_description": "Descubre nuestras últimas noticias y actualizaciones.",
+
+   "menu_legal": "Legal",
+   "menu_features": "Funciones",
+   "menu_language": "Idioma"
 }
