update english hero title

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,8 +2,8 @@
 
    "header_login": "Login",
 
-   "hero_title": "Create Your QR Code Menu",
-   "hero_subtitle": "Take Orders from Tables",
+   "hero_title": "Create Free QR Menu",
+   "hero_subtitle": "Receive orders from tables",
    "hero_description": "Transform your paper menu into a fully digital experience. Let guests scan a QR code to view the menu, place their orders from the table, and manage all incoming orders from a single dashboard.",
    
    "hero_cta_button": "Create Free Menu",
