--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -82,5 +82,17 @@
 
    "menu_legal": "Yasal",
    "menu_features": "Özellikler",
-   "menu_language": "Dil"
+   "menu_language": "Dil",
+
+   "downloads_subtitle": "Yazılım İndirmeleri",
+   "downloads_title": "Menumix Yazıcı Sunucusu",
+   "downloads_description": "Masalardan gelen siparişleri doğrudan mutfak yazıcınıza yazdırmak için Menumix Yazıcı Sunucusunu indirin ve kurun.",
+   "downloads_printer_server_title": "Menumix Yazıcı Sunucusu v0.9.0",
+   "downloads_printer_server_description": "Bu uygulama, QR menü siparişlerinizi otomatik olarak mutfak yazıcınıza gönderir. İşletim sisteminize uygun sürümü seçin.",
+   "downloads_macos_arm": "macOS (Apple Silicon)",
+   "downloads_macos_intel": "macOS (Intel)",
+   "downloads_windows_64": "Windows (64-bit)",
+   "downloads_windows_32": "Windows (32-bit)",
+   "downloads_installation_title": "Kurulum Bilgisi",
+   "downloads_installation_description": "İndirdiğiniz dosyayı açın ve uygulama kurulumunu tamamlayın. Yazıcı ayarları için yardım dökümanını inceleyin."
 }
