fix trailing comma on translation json files

--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -92,5 +92,5 @@
    "downloads_macos_arm": "macOS (Apple Silicon)",
    "downloads_macos_intel": "macOS (Intel)",
    "downloads_windows_64": "Windows (64-bit)",
-   "downloads_windows_32": "Windows (32-bit)",
+   "downloads_windows_32": "Windows (32-bit)"
 }
